--- a/prototype-7/prototype.css
+++ b/prototype-7/prototype.css
@@ -2139,7 +2139,7 @@
   .vd-rating-big {
     font-family: 'DM Sans', sans-serif;
     font-size: 32px;
-    font-weight: 900;
+    font-weight: 700;
     line-height: 40px;
     color: #020203;
   }
