--- a/prototype-9/prototype.css
+++ b/prototype-9/prototype.css
@@ -2217,7 +2217,7 @@
   .vd-rating-big {
     font-family: 'DM Sans', sans-serif;
     font-size: 32px;
-    font-weight: 900;
+    font-weight: 700;
     line-height: 40px;
     color: #020203;
   }
